// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiVerticalRectSeries all props are rendered 1`] = `
<div
  style="width:100%;height:100%"
>
  <div>
    <div
      class="rv-xy-plot "
      style="width:600px;height:200px"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        width="600"
      >
        <g>
          <g
            class="rv-xy-plot__series rv-xy-plot__series--rect "
            transform="translate(2,2)"
          >
            <rect
              height="65.33333333333331"
              style="opacity:1;stroke:white;fill:#DB1374;stroke-width:1;rx:2px;ry:2px"
              width="0"
              x="0"
              y="130.66666666666669"
            />
            <rect
              height="196"
              style="opacity:1;stroke:white;fill:#DB1374;stroke-width:1;rx:2px;ry:2px"
              width="596"
              x="0"
              y="0"
            />
          </g>
        </g>
        <g
          class="rv-xy-plot__grid-lines"
          transform="translate(2,2)"
        >
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="196"
            y2="196"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="169.86666666666667"
            y2="169.86666666666667"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="143.73333333333335"
            y2="143.73333333333335"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="117.6"
            y2="117.6"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="91.46666666666667"
            y2="91.46666666666667"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="65.33333333333334"
            y2="65.33333333333334"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="39.19999999999999"
            y2="39.19999999999999"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="13.066666666666663"
            y2="13.066666666666663"
          />
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--horizontal "
          transform="translate(2,198)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="0"
            x2="596"
            y1="0"
            y2="0"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(0, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(59.6, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.1
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(119.2, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(178.79999999999998, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.3
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(238.4, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(298, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.5
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(357.59999999999997, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(417.2, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.7
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(476.8, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(536.4, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.9
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(596, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1.0
              </text>
            </g>
          </g>
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--vertical "
          transform="translate(0,2)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="2"
            x2="2"
            y1="0"
            y2="196"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(2, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 196)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 169.86666666666667)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 143.73333333333335)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 117.6)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 91.46666666666667)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 65.33333333333334)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                10
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 39.19999999999999)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                12
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 13.066666666666663)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                14
              </text>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`EuiVerticalRectSeries is rendered 1`] = `
<div
  style="width: 100%; height: 100%;"
>
  <div
    aria-label="aria-label"
    class="testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <div
      class="rv-xy-plot "
      style="width: 600px; height: 200px;"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        width="600"
      >
        <g>
          <g
            class="rv-xy-plot__series rv-xy-plot__series--rect "
            transform="translate(2,2)"
          >
            <rect
              height="65.33333333333331"
              style="opacity: 1; stroke: white; fill: #00B3A4; stroke-width: 1;"
              width="0"
              x="0"
              y="130.66666666666669"
            />
            <rect
              height="196"
              style="opacity: 1; stroke: white; fill: #00B3A4; stroke-width: 1;"
              width="596"
              x="0"
              y="0"
            />
          </g>
        </g>
        <g
          class="rv-xy-plot__grid-lines"
          transform="translate(2,2)"
        >
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray: 5 5; stroke-opacity: 0.3;"
            x1="0"
            x2="596"
            y1="196"
            y2="196"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray: 5 5; stroke-opacity: 0.3;"
            x1="0"
            x2="596"
            y1="169.86666666666667"
            y2="169.86666666666667"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray: 5 5; stroke-opacity: 0.3;"
            x1="0"
            x2="596"
            y1="143.73333333333335"
            y2="143.73333333333335"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray: 5 5; stroke-opacity: 0.3;"
            x1="0"
            x2="596"
            y1="117.6"
            y2="117.6"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray: 5 5; stroke-opacity: 0.3;"
            x1="0"
            x2="596"
            y1="91.46666666666667"
            y2="91.46666666666667"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray: 5 5; stroke-opacity: 0.3;"
            x1="0"
            x2="596"
            y1="65.33333333333334"
            y2="65.33333333333334"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray: 5 5; stroke-opacity: 0.3;"
            x1="0"
            x2="596"
            y1="39.19999999999999"
            y2="39.19999999999999"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray: 5 5; stroke-opacity: 0.3;"
            x1="0"
            x2="596"
            y1="13.066666666666663"
            y2="13.066666666666663"
          />
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--horizontal "
          transform="translate(2,198)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="0"
            x2="596"
            y1="0"
            y2="0"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(0, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(59.6, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.1
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(119.2, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(178.79999999999998, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.3
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(238.4, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(298, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.5
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(357.59999999999997, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(417.2, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.7
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(476.8, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(536.4, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.9
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(596, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1.0
              </text>
            </g>
          </g>
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--vertical "
          transform="translate(0,2)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="2"
            x2="2"
            y1="0"
            y2="196"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(2, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 196)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 169.86666666666667)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 143.73333333333335)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 117.6)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 91.46666666666667)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 65.33333333333334)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                10
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 39.19999999999999)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                12
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 13.066666666666663)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                14
              </text>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`EuiVerticalRectSeries renders stacked vertical histogram 1`] = `
<div
  style="width:100%;height:100%"
>
  <div>
    <div
      class="rv-xy-plot "
      style="width:600px;height:200px"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        width="600"
      >
        <g>
          <g
            class="rv-xy-plot__series rv-xy-plot__series--rect "
            transform="translate(2,2)"
          >
            <rect
              height="98"
              style="opacity:1;stroke:white;fill:#DB1374;stroke-width:1;rx:2px;ry:2px"
              width="0"
              x="149"
              y="98"
            />
            <rect
              height="58.80000000000001"
              style="opacity:1;stroke:white;fill:#DB1374;stroke-width:1;rx:2px;ry:2px"
              width="298"
              x="149"
              y="137.2"
            />
          </g>
        </g>
        <g>
          <g
            class="rv-xy-plot__series rv-xy-plot__series--rect "
            transform="translate(2,2)"
          >
            <rect
              height="39.19999999999999"
              style="opacity:1;stroke:white;fill:#3185FC;stroke-width:1;rx:2px;ry:2px"
              width="0"
              x="149"
              y="58.80000000000001"
            />
            <rect
              height="137.2"
              style="opacity:1;stroke:white;fill:#3185FC;stroke-width:1;rx:2px;ry:2px"
              width="298"
              x="149"
              y="0"
            />
          </g>
        </g>
        <g
          class="rv-xy-plot__grid-lines"
          transform="translate(2,2)"
        >
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="196"
            y2="196"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="156.8"
            y2="156.8"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="117.6"
            y2="117.6"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="78.4"
            y2="78.4"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="39.19999999999999"
            y2="39.19999999999999"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="0"
            y2="0"
          />
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--horizontal "
          transform="translate(2,198)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="0"
            x2="596"
            y1="0"
            y2="0"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(0, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(149, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(447, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1
              </text>
            </g>
          </g>
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--vertical "
          transform="translate(0,2)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="2"
            x2="2"
            y1="0"
            y2="196"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(2, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 196)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 156.8)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 117.6)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 78.4)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 39.19999999999999)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                10
              </text>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;
